# OOP_Lab_2

./: .gitignore  CMakeLists.txt  README.md
include/: Box_Capacity.h  MyVector.h  Three.h
src/: Box_Capacity.cpp  MyVector.cpp  Three.cpp  sol.cpp
test/: test_Box_Capacity.cpp  test_Three.cpp
